force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__AccessibilityFeatures__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccessibilityFeatures__c</fullName>
    <label>Accessibility Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roll-in shower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>