force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__AlternateCity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AlternateCity__c</fullName>
    <label>Alternate City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>