force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__AlternateCountry__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AlternateCountry__c</fullName>
    <label>Alternate Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>