force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__AlternatePostalCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AlternatePostalCode__c</fullName>
    <label>Alternate Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>