force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__AlternateState__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AlternateState__c</fullName>
    <label>Alternate State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>