force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AutoNumber__c</fullName>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>