force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__BedroomsAvailable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BedroomsAvailable__c</fullName>
    <label>Bedrooms Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>