force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__Cooling__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Cooling__c</fullName>
    <label>Cooling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>