force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__EmployeeOwner__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EmployeeOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>