force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__ExteriorMaterial__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ExteriorMaterial__c</fullName>
    <label>Exterior Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brick/Stone</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Stucco</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>