force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__Floors__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Floors__c</fullName>
    <label>Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>