force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__HasElevator__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HasElevator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elevator</label>
    <type>Checkbox</type>
</CustomField>