force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__Heating__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Heating__c</fullName>
    <label>Heating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Forced Air</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>