force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__HousingType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HousingType__c</fullName>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>co-Op</fullName>
            </value>
            <value>
                <fullName>Rent Supplement</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>