force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__Laundry__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Laundry__c</fullName>
    <label>Laundry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Unit</fullName>
            </value>
            <value>
                <fullName>In Building</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>