force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__PremisesIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremisesIdentifier__c</fullName>
    <description>Defined as &apos;external id&quot; so ID to be used especially for integration to outside systems.</description>
    <externalId>true</externalId>
    <label>Premises Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>