force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__PremisesNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PremisesNumber__c</fullName>
    <description>Potentially an external id</description>
    <label>Premises Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>