force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__Region__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>