force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__ResidentType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ResidentType__c</fullName>
    <label>Resident Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Families</fullName>
            </value>
            <value>
                <fullName>Singles</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>