force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__RoofMaterial__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RoofMaterial__c</fullName>
    <label>Roof Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slate</fullName>
            </value>
            <value>
                <fullName>Shingle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>