force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__State__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__State__c</fullName>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>