force-app/main/default/objects/vlocity_ps__Premises__c/fields/vlocity_ps__YearBuilt__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__YearBuilt__c</fullName>
    <label>Year Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>